[package]
name = "cutedogs"
version = "0.0.3"
edition = "2021"
description = "An easy to use procedural macro to reduce documentation boilerplate"
license = "MIT OR Apache-2.0"
repository = "https://github.com/germ3n/cutedogs"

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[lib]
proc-macro = true